# duckdb-udf-numba-jit

./: .gitignore  Cargo.toml  calc.py  calc_duckdb_sql.py  calc_udf_py.py  convert_to_parquet.py  duckdb_to_numpy.py  entries.py  julia.py  main.py  mandelbrot.py  method_duckdb_sql.py  method_udf.py  method_udf_numba.py  method_udf_py.py  method_udf_rs.py  pyproject.toml  viz.ipynb
src/: lib.rs
