[package]
name = "udfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "udfs"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "51.0.0", features = ["pyarrow"] }
eyre = "0.6.12"
pyo3 = { version = "0.20.0", features = ["eyre"] }
